# Data-Pipeline

./: .gitignore  README.md  list_compare.py  pre_processing.py  pyproject.toml  setup.py
data_acquisition/: fault_header.csv
data_pipeline_library.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
jobs/: job_test.py
src/data_pipeline/: __init__.py
src/data_pipeline/core/: pre_processing.py
src/data_pipeline/jobs/: job_test.py
src/data_pipeline/processing_pipe/: logger.py  pre_processing.py
utility/: __init__.py  logger.py  pre_processing.py
