[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_data_pipeline"
version = "0.0.7"
authors = [
  { name="Samuele" },
]
description = "A modern data pipeline in Python to process data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars"
]

[tool.hatch.build.targets.wheel]
packages = ["src/data_pipeline"]